# Valdi_Widgets

./: .bazelrc  .cursorrules  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  MODULE.bazel  README.md  SECURITY.md  WORKSPACE
.github/: copilot-instructions.md
valdi_modules/navigation/: BUILD.bazel  README.md  tsconfig.json
valdi_modules/navigation/src/: INavigator.ts  NavigationController.tsx  NavigationPageComponent.tsx
valdi_modules/navigation/test/: Navigator.spec.tsx  Navigator.ts
valdi_modules/playground/: BUILD.bazel
valdi_modules/playground/src/: Playground.tsx  PlaygroundApp.tsx  WidgetsCatalog.tsx
valdi_modules/playground/web_app/: package-lock.json  package.json  webpack.config.js
valdi_modules/playground/web_app/src/: App.js  index.html
valdi_modules/share/: BUILD.bazel  tsconfig.json
valdi_modules/share/android/: README.md
valdi_modules/share/ios/: README.md  ShareHelper.h  ShareHelper.m  ShareHelper.swift  ShareNativeModuleImpl.m
valdi_modules/share/src/: Share.ts  ShareNative.d.ts  index.ts
valdi_modules/share/web/: tsconfig.json
valdi_modules/share/web/src/: ShareWeb.ts
valdi_modules/valdi_standalone_ui/: BUILD.bazel  tsconfig.json
valdi_modules/valdi_standalone_ui/src/: DesktopActionSheet.tsx  DesktopApp.tsx  DesktopMessageHandler.ts  ModalPageComponent.tsx  StatefulSwitch.tsx  VerticalSplitSeparator.tsx  VerticalSplitView.tsx
valdi_modules/widgets/: BUILD.bazel  ids.yaml
valdi_modules/widgets/android/: ValdiDatePickerAttributesBinder.kt  ValdiEmojiTextView.kt  ValdiEmojiTextViewAttributesBinder.kt  ValdiIndexPickerAttributesBinder.kt  ValdiTimePickerAttributesBinder.kt
valdi_modules/widgets/ios/: SCWidgetsDatePicker.h  SCWidgetsDatePicker.m  SCWidgetsDatePickerUtils.h  SCWidgetsDatePickerUtils.m  SCWidgetsDateTimePicker.h  SCWidgetsDateTimePicker.m  SCWidgetsIndexPicker.h  SCWidgetsIndexPicker.m  SCWidgetsLabel.h  SCWidgetsLabel.m  SCWidgetsTimePicker.h  SCWidgetsTimePicker.m
valdi_modules/widgets/macos/: SCWidgetsMacOSDatePicker.h  SCWidgetsMacOSDatePicker.m  SCWidgetsMacOSIndexPicker.h  SCWidgetsMacOSIndexPicker.m  SCWidgetsMacOSLabel.h  SCWidgetsMacOSLabel.m  SCWidgetsMacOSTimePicker.h  SCWidgetsMacOSTimePicker.m
valdi_modules/widgets/src/: ColorSpec.ts  InitSemanticColors.ts  RegisterSemanticColors.ts  Theme.ts
valdi_modules/widgets/src/components/: ComponentDef.d.ts  RenderFunction.d.ts
valdi_modules/widgets/src/components/animation/: AnimatableVisibilityView.tsx  AnimationRotate.tsx  AnimationShimmer.tsx  AnimationSliding.tsx  AnimationSquishy.tsx  EasingFunctions.ts  VerticallyOpenableComponent.tsx
valdi_modules/widgets/src/components/button/: Checkbox.tsx  ConfirmationButton.tsx  CoreButton.tsx  FloatingActionButton.tsx  PillButton.tsx
valdi_modules/widgets/src/components/card/: Card.tsx  CollapsibleCard.tsx
valdi_modules/widgets/src/components/cell/: Cell.tsx  style.ts
valdi_modules/widgets/src/components/dragdrop/: DragDropController.ts  DragDropListener.d.ts
valdi_modules/widgets/src/components/grid/: GridView.tsx  utils.ts
valdi_modules/widgets/src/components/image/: FadeImage.tsx  FadeView.tsx
valdi_modules/widgets/src/components/indexview/: IndexView.tsx  IndexViewAnchor.tsx  IndexViewHandler.ts  IndexViewSymbol.ts  IndexViewSymbols.ts
valdi_modules/widgets/src/components/inputs/: CoreTextField.tsx  FloatLabeledTextField.tsx  FormTextView.tsx  PillTextField.tsx  ScrollWithKeyboard.d.ts  SearchBox.tsx  TextFieldHandler.ts  TextFieldWrapper.tsx  TextInputHandler.ts  TextInputWrapper.tsx  TextViewHandler.ts  TextViewWrapper.tsx
valdi_modules/widgets/src/components/pageview/: DotsIndicator.tsx  PageView.tsx
valdi_modules/widgets/src/components/pickers/: DatePicker.tsx  IndexPicker.tsx  PickerActionSheet.tsx  PickerView.tsx  TimePicker.tsx
valdi_modules/widgets/src/components/refresh/: DataSyncingBar.tsx  PullToRefresh.tsx
valdi_modules/widgets/src/components/rules/: HorizontalRule.tsx  RuleViewModel.d.ts  VerticalRule.tsx
valdi_modules/widgets/src/components/scroll/: ScrollViewHandler.ts  ScrollViewListener.ts  ScrollViewSubscription.ts
valdi_modules/widgets/src/components/section/: Section.tsx  SectionBadge.tsx  SectionBody.tsx  SectionHandler.d.ts  SectionHeader.tsx  SectionList.tsx  SectionModel.d.ts  SectionSeparator.tsx  SectionStatusBar.tsx
valdi_modules/widgets/src/components/sheet/: Sheet.tsx
valdi_modules/widgets/src/components/slider/: Slider.tsx
valdi_modules/widgets/src/components/subscreen/: Subscreen.tsx  SubscreenContent.tsx  SubscreenHeader.tsx  SubscreenHeaderAction.tsx  SubscreenHeaderBlueprint.tsx  SubscreenHeaderButton.tsx  SubscreenHeaderButtonBack.tsx  SubscreenHeaderButtonClose.tsx  SubscreenHeaderButtonCommonViewModel.tsx  SubscreenHeaderButtonDismiss.tsx  SubscreenHeaderSpacing.tsx  SubscreenHeaderTitle.tsx  SubscreenSections.tsx  SubscreenTabs.tsx
valdi_modules/widgets/src/components/tabs/: TabsContent.tsx  TabsCoordinator.ts  TabsHeader.tsx  TabsItem.tsx  TabsItemWithTitle.tsx
valdi_modules/widgets/src/components/text/: EmojiLabel.tsx  TextWithTags.tsx  TextWithTagsChunk.d.ts  TextWithTagsStyle.d.ts
valdi_modules/widgets/src/components/toggle/: CoreJumboToggle.tsx  CoreToggle.tsx  RadioToggle.tsx  SelectorToggle.tsx
valdi_modules/widgets/src/components/tooltip/: TooltipConstants.ts  TooltipContainer.tsx  TooltipInlined.tsx  TooltipPosition.ts
valdi_modules/widgets/src/components/util/: ComponentDefRenderer.tsx  ComponentMeasurer.tsx  CustomColor.ts  DeferredItemsRenderer.ts  DragToDismissController.ts  FocusableComponentRef.ts  Insets.ts  MeasureCache.ts  MeasureCachePopulator.tsx  MeasuredLayout.tsx  MeasuredView.tsx  WithInsets.tsx  WithKeyboardPadding.tsx
valdi_modules/widgets/src/styles/: TextStyleFont.ts  gradients.ts  semanticColors.ts  semanticColorsGen.ts  shadows.ts  spacing.ts
valdi_modules/widgets/test/components/animation/: EasingFunctionsTest.ts
valdi_modules/widgets/test/styles/: gradientsTest.ts
valdi_modules/widgets/web/: tsconfig.json
valdi_modules/widgets/web/src/: WidgetsWeb.js  WidgetsWeb.ts
(+88 files in other folders)
