module(name = "valdi_widgets", version = "0.1")

# Valdi bleeding edge (https://github.com/Snapchat/Valdi)
# Must match the commit in WORKSPACE for consistency.
VALDI_COMMIT = "45b28375a189da8f9c24544e3b2d40318d3386a9"

VALDI_URL = "https://github.com/Snapchat/Valdi/archive/{}.tar.gz".format(VALDI_COMMIT)

VALDI_STRIP_PREFIX = "Valdi-{}".format(VALDI_COMMIT)

bazel_dep(name = "valdi")
archive_override(
    module_name = "valdi",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX,
    patches = ["//third-party/patches:valdi_remove_llvm_extension.patch"],
    patch_strip = 1,
)

bazel_dep(name = "android_macros")
archive_override(
    module_name = "android_macros",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/macros",
)

bazel_dep(name = "snap_macros")
archive_override(
    module_name = "snap_macros",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/valdi/snap_macros",
)

bazel_dep(name = "snap_client_toolchains")
archive_override(
    module_name = "snap_client_toolchains",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/toolchains",
)

bazel_dep(name = "snap_platforms")
archive_override(
    module_name = "snap_platforms",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/platforms",
)

bazel_dep(name = "skia_user_config")
archive_override(
    module_name = "skia_user_config",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/third-party/skia_user_config",
)

bazel_dep(name = "rules_hdrs")
archive_override(
    module_name = "rules_hdrs",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/third-party/rules_hdrs",
)

bazel_dep(name = "valdi_toolchain")
archive_override(
    module_name = "valdi_toolchain",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bin",
)

bazel_dep(name = "resvg_libs")
archive_override(
    module_name = "resvg_libs",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/third-party/resvg/resvg_libs",
)

# Apple CC toolchains must be registered before LLVM so they take priority
# for ObjC compilation on macOS. Root module toolchains shadow dependency
# module toolchains, so we must register both here.
bazel_dep(name = "apple_support", version = "1.21.0", repo_name = "build_bazel_apple_support")

apple_cc_configure = use_extension("@build_bazel_apple_support//crosstool:setup.bzl", "apple_cc_configure_extension")
use_repo(apple_cc_configure, "local_config_apple_cc_toolchains", "local_config_apple_cc")
register_toolchains("@local_config_apple_cc_toolchains//:all")

bazel_dep(name = "toolchains_llvm", version = "1.3.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(name = "llvm_toolchain", llvm_version = "16.0.0")
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# Required for widgets/BUILD.bazel which uses ts_project directly.
# The extension (rules_ts_ext.deps) is declared by Valdi's MODULE.bazel;
# declaring it here too causes a duplicate npm_typescript repo error.
bazel_dep(name = "aspect_rules_ts", version = "3.7.0")

# Third-party patches required because Valdi's single_version_override
# entries only take effect when Valdi is the root module.
single_version_override(
    module_name = "rules_swift",
    patches = ["//third-party/patches:rules_swift.patch"],
    patch_strip = 1,
)

single_version_override(
    module_name = "rules_kotlin",
    patches = ["//third-party/patches:rules_kotlin.patch"],
)

single_version_override(
    module_name = "rules_android_ndk",
    patches = ["//third-party/patches:rules_android_ndk.patch"],
)

single_version_override(
    module_name = "websocketpp",
    patches = ["//third-party/patches:websocketpp.patch"],
    patch_strip = 1,
)

single_version_override(
    module_name = "protobuf",
    version = "27.0",
)

single_version_override(
    module_name = "rules_apple",
    version = "4.0.0",
)

single_version_override(
    module_name = "rules_pkg",
    version = "0.9.1",
)

single_version_override(
    module_name = "zlib",
    version = "1.3.2",
)
