module(name = "valdi_widgets", version = "0.1")

# Valdi framework (https://github.com/Snapchat/Valdi)
# For development against a local checkout, replace archive_override with
# local_path_override entries (see CONTRIBUTING.md).
VALDI_TAG = "beta-0.1.0"
VALDI_URL = "https://github.com/Snapchat/Valdi/archive/{}.tar.gz".format(VALDI_TAG)
VALDI_STRIP_PREFIX = "Valdi-{}".format(VALDI_TAG)

bazel_dep(name = "valdi", version = "0.1")
archive_override(
    module_name = "valdi",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX,
)

bazel_dep(name = "android_macros")
archive_override(
    module_name = "android_macros",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/macros",
)

bazel_dep(name = "snap_macros")
archive_override(
    module_name = "snap_macros",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/valdi/snap_macros",
)

bazel_dep(name = "snap_client_toolchains")
archive_override(
    module_name = "snap_client_toolchains",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/toolchains",
)

bazel_dep(name = "snap_platforms")
archive_override(
    module_name = "snap_platforms",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bzl/platforms",
)

bazel_dep(name = "skia_user_config")
archive_override(
    module_name = "skia_user_config",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/third-party/skia_user_config",
)

bazel_dep(name = "rules_hdrs")
archive_override(
    module_name = "rules_hdrs",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/third-party/rules_hdrs",
)

bazel_dep(name = "valdi_toolchain")
archive_override(
    module_name = "valdi_toolchain",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/bin",
)

bazel_dep(name = "resvg_libs")
archive_override(
    module_name = "resvg_libs",
    urls = [VALDI_URL],
    strip_prefix = VALDI_STRIP_PREFIX + "/third-party/resvg/resvg_libs",
)

# C++ toolchains via Valdi's unified extension (Apple CC before LLVM for ObjC priority).
valdi_toolchains = use_extension("@valdi//bzl:valdi_toolchains.bzl", "valdi_toolchains")
use_repo(valdi_toolchains, "local_config_apple_cc_toolchains", "local_config_apple_cc", "llvm_toolchain", "llvm_toolchain_llvm")
register_toolchains("@local_config_apple_cc_toolchains//:all")
register_toolchains("@llvm_toolchain//:all")

# Required for widgets/BUILD.bazel which uses ts_project directly.
bazel_dep(name = "aspect_rules_ts", version = "3.7.0")

# Third-party patches: Valdi's single_version_override entries only take
# effect when Valdi is the root module. The Valdi Bazel registry provides
# pre-patched versions of rules_swift, rules_kotlin, and rules_android_ndk.
# Websocketpp still needs a local patch.
single_version_override(
    module_name = "websocketpp",
    patches = ["//third-party/patches:websocketpp.patch"],
    patch_strip = 1,
)

# Version pins (must match Valdi's MODULE.bazel).
single_version_override(module_name = "protobuf", version = "27.0")
single_version_override(module_name = "rules_apple", version = "4.0.0")
single_version_override(module_name = "rules_pkg", version = "0.9.1")
single_version_override(module_name = "zlib", version = "1.3.2")
