load("@valdi//bzl/valdi:valdi_application.bzl", "valdi_application")
load("@valdi//bzl/valdi:valdi_exported_library.bzl", "valdi_exported_library")
load("@valdi//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_application(
    name = "app",
    root_component_path = "PlaygroundApp@playground/src/PlaygroundApp",
    title = "Valdi Playground",
    deps = [":playground"],
)

valdi_module(
    name = "playground",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]) + [
        "tsconfig.json",
    ],
    res = glob([
        "res/**/*.jpeg",
        "res/**/*.jpg",
        "res/**/*.png",
        "res/**/*.svg",
        "res/**/*.webp",
    ]),
    ios_module_name = "VLPlayground",
    ios_output_target = "release",
    android_output_target = "release",
    visibility = ["//visibility:public"],
    deps = [
        "//valdi_modules/widgets",
        "@valdi//src/valdi_modules/src/valdi/valdi_core",
        "@valdi//src/valdi_modules/src/valdi/valdi_tsx",
    ],
)

valdi_exported_library(
    name = "playground_export",
    ios_bundle_id = "com.snap.valdi.playground",
    ios_bundle_name = "ValdiPlayground",
    web_package_name = "playground_export_npm",
    deps = [
        ":playground",
        "@valdi//src/valdi_modules/src/valdi/web_renderer",
    ],
)
