load("@valdi//bzl/valdi:valdi_module.bzl", "valdi_module")
load("@valdi//bzl/valdi:valdi_android_library.bzl", "valdi_android_library")

# Web: implementation linked for web builds (valdi_module web_deps pattern)
filegroup(
    name = "share_web",
    srcs = glob(["web/**/*.ts"]),
    visibility = ["//visibility:public"],
)

# Android: native implementation per https://github.com/Snapchat/Valdi/blob/main/docs/docs/native-polyglot.md
valdi_android_library(
    name = "native_module_android",
    srcs = glob(["android/**/*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        ":share_api_kt",
        "@valdi//valdi:valdi_java",
    ],
)

# iOS: Obj-C implementation per https://github.com/Snapchat/Valdi/blob/main/docs/docs/native-polyglot.md
objc_library(
    name = "native_module_ios",
    srcs = [
        "ios/ShareHelper.m",
        "ios/ShareNativeModuleImpl.m",
    ],
    hdrs = ["ios/ShareHelper.h"],
    includes = ["ios"],
    copts = ["-I."],
    sdk_frameworks = ["UIKit"],
    visibility = ["//visibility:public"],
    deps = [
        ":share_api_objc",
        "@valdi//valdi_core:valdi_core",
    ],
)

valdi_module(
    name = "share",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "web/src/**/*.ts",
    ]) + [
        "tsconfig.json",
    ],
    android_class_path = "com.snap.valdi.modules.share",
    android_deps = [":native_module_android"],
    android_output_target = "release",
    ios_deps = [":native_module_ios"],
    ios_module_name = "SCCValdiShare",
    ios_output_target = "release",
    visibility = ["//visibility:public"],
    web_deps = [":share_web"],
    deps = [
        "@valdi//src/valdi_modules/src/valdi/valdi_core",
    ],
)
